<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Blob"
        android:layout_width="834dp"
        android:layout_height="544dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="108dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_of_a_blob"
        android:rotation="-23"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_blob_updated" />

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:autoSizeMaxTextSize="48sp"
        android:autoSizeMinTextSize="24sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/web_watch"
        android:textColor="@color/icon_gray"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SubmitButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginBottom="32dp"
        android:text="@string/submit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CheckIDButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="127dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:text="@string/check_id"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/SubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/CheckIDButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/URLInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginStart="72dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="72dp"
                app:boxBackgroundColor="@color/colorTransparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/URLInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/CancelQueryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/minus_button_deletes_current_query"
                app:layout_constraintBottom_toBottomOf="@+id/IDInputLayout"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/URLInputLayout"
                app:layout_constraintWidth_percent="0.15"
                app:srcCompat="@drawable/ic_cancel" />

            <ImageButton
                android:id="@+id/AddAnotherURLAndIDButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/plus_button_adds_another_query"
                app:layout_constraintBottom_toBottomOf="@+id/IDInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintTop_toTopOf="@+id/URLInputLayout"
                app:layout_constraintWidth_percent="0.15"
                app:srcCompat="@drawable/ic_add" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/IDInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/URLInputLayout"
                app:layout_constraintStart_toStartOf="@+id/URLInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/URLInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IDInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:singleLine="true"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="123dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TimeIntervalInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/IDInputLayout"
                app:layout_constraintStart_toStartOf="@+id/IDInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/IDInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TimeIntervalInput"
                    android:layout_width="150sp"
                    android:layout_height="match_parent"
                    android:hint="@string/time_interval_minutes"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/HistoryButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        android:contentDescription="@string/history_button"
        app:layout_constraintBottom_toBottomOf="@+id/TitleText"
        app:layout_constraintEnd_toStartOf="@+id/MenuButton"
        app:layout_constraintTop_toTopOf="@+id/TitleText"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@drawable/ic_history"
        app:tint="@color/icon_gray"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.1"/>

    <TextView
        android:id="@+id/QueryList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:isScrollContainer="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/MenuButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#00ECDEDE"
        android:contentDescription="@string/menu_button"
        app:layout_constraintBottom_toBottomOf="@+id/TitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TitleText"
        app:srcCompat="@drawable/ic_menu"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>